--- a/style.css
+++ b/style.css
@@ -71,3 +71,8 @@ h1 {
   .dropdown:hover .dropdown-content {
     display: block;
   }
+
+  table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
