--- a/style.css
+++ b/style.css
@@ -1,7 +1,19 @@
 h1 {
-    color: red;
+    color: rgb(77, 0, 0);
 }
 
+h2{
+  font-weight: 900;
+}
+body{
+  background-color: rgb(90, 95, 97);
+  text-align: center;
+  font-family:cursive;
+}
+
+li{
+  list-style-type: none;
+}
 /* Navbar container */
 .navbar {
     overflow: hidden;
