--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ h2{
 body{
   background-color: rgb(90, 95, 97);
   text-align: center;
-  font-family:cursive;
+  font-family:Verdana, Geneva, Tahoma, sans-serif
 }
 
 li{
